
Wed Apr 9 15:22:18 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* mini.c: always intern strings references with ldstr at compile time.

Tue Apr 8 11:41:26 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* Makefile.am: add BUILT_SOURCES.

Mon Apr 7 16:31:34 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* driver.c: give a better error message when the assembly to execute
	doesn't have an entry point.

2003-04-07  Dietmar Maurer  <dietmar@ximian.com>

	* Makefile.am: added hack for automake

	* mono/mini/mini.c (mono_save_args): always copy arguments to keep
	correct sematics.

	* mono/mini/ssa.c (mono_ssa_avoid_copies): don't optimize calls

22003-04-07  Martin Baulig  <martin@ximian.com>

	* Makefile.am: Added Makefile.am.

	* debugger-main.c: Removed, this is now in the debugger where it
	belongs.

	* mini.pc.in: Call this package `mini' for the moment.
