@@ -1,3 +1,6 @@
+2003-04-09  Dietmar Maurer  <dietmar@ximian.com>
+
+	* aot.c (mono_aot_get_method): register all used strings
 
 Wed Apr 9 15:22:18 CEST 2003 Paolo Molaro <lupus@ximian.com>
 
